--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@vuelidate/core": "^2.0.0-alpha.41",
     "@vuelidate/validators": "^2.0.0-alpha.29",
     "axios": "^0.27.2",
+    "material-icons": "^1.11.5",
     "pinia": "^2.0.14",
     "tiny-emitter": "^2.1.0",
     "vue": "^3.2.36",
