Icons + misc fix

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "list-site",
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --https",
     "build": "run-p type-check build-only",
     "preview": "vite preview --port 4173",
     "build-only": "vite build",
